--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/padding_10dp">
 
     <TextView
         android:id="@+id/desc"
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/desc"
         android:layout_centerHorizontal="true"
-        android:scaleType="centerCrop" />
+        android:layout_marginTop="@dimen/padding_5dp"
+        android:scaleType="centerInside" />
 
 </RelativeLayout>
