--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -34,6 +34,7 @@
                     android:id="@+id/image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/content_desc"
                     android:layout_alignParentRight="true"
                     android:layout_margin="@dimen/padding_5dp" />
 
@@ -56,6 +57,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/padding_5dp"
+            android:contentDescription="@string/content_desc"
             android:src="@drawable/ic_arrow_right" />
 
     </RelativeLayout>
