--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="text_size_large">25dp</dimen>
-    <dimen name="text_size_title">15dp</dimen>
-    <dimen name="text_size_desc">13dp</dimen>
+    <dimen name="text_size_title">15sp</dimen>
+    <dimen name="text_size_desc">13sp</dimen>
     <dimen name="padding_2dp">2dp</dimen>
     <dimen name="padding_5dp">5dp</dimen>
     <dimen name="padding_10dp">10dp</dimen>
