--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/right_arrow"
+            android:layout_toStartOf="@+id/right_arrow"
             android:orientation="vertical">
 
             <TextView
@@ -35,7 +35,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/content_desc"
-                    android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_margin="@dimen/padding_5dp" />
 
@@ -44,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/padding_5dp"
-                    android:layout_toLeftOf="@id/image"
+                    android:layout_toStartOf="@+id/image"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/text_size_desc" />
             </RelativeLayout>
@@ -55,7 +54,6 @@
             android:id="@+id/right_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/padding_5dp"
